changed build.properties to include icons and LICENSE.txt
git-svn-id: https://svn.jfire.org/svn/main/trunk/org.nightlabs.jfire.base@2881 18c61ebf-f106-0410-9e1e-81fb82415b8f

--- a/build.properties
+++ b/build.properties
@@ -6,4 +6,22 @@ bin.includes = plugin.xml,\
                icons/,\
                schema/,\
                plugin.properties,\
-               org.nightlabs.jfire.base.jar
+               org.nightlabs.jfire.base.jar,\
+               splash.bmp,\
+               LICENSE.txt
+src.includes = src/,\
+               splash.bmp,\
+               schema/,\
+               plugin.xml,\
+               plugin.properties,\
+               nightly.xml,\
+               lib/,\
+               icons/,\
+               build.properties,\
+               build-nightlabs.xml,\
+               build-nightlabs.properties,\
+               build-nightlabs-path.properties,\
+               build-nightlabs-compile.pre.xml,\
+               LICENSE.txt,\
+               .project,\
+               .classpath
