- moved jboss jars from org.nightlabs.base to org.nightlabs.jfire.base - removed jboss-j2ee.jar and jbosssx.jar (because IMHO the libs are in jbossall-client.jar)
git-svn-id: https://svn.jfire.org/svn/main/trunk/org.nightlabs.jfire.base@3044 18c61ebf-f106-0410-9e1e-81fb82415b8f

--- a/.classpath
+++ b/.classpath
@@ -14,5 +14,6 @@
 	<classpathentry kind="lib" path="lib/JFireRCLBackend.jar"/>
 	<classpathentry kind="lib" path="lib/JFireRCLBackendBean.jar"/>
 	<classpathentry kind="lib" path="lib/JFireRemoteClassLoader.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/jbossall-client.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
