--- a/build.properties
+++ b/build.properties
@@ -1,21 +1,20 @@
 source.org.nightlabs.jfire.base.jar = src/
 output.org.nightlabs.jfire.base.jar = bin/
 bin.includes = plugin.xml,\
-               lib/,\
                run.sh,\
                icons/,\
                schema/,\
                plugin.properties,\
                org.nightlabs.jfire.base.jar,\
                splash.bmp,\
-               LICENSE.txt
+               LICENSE.txt,\
+               lib/
 src.includes = src/,\
                splash.bmp,\
                schema/,\
                plugin.xml,\
                plugin.properties,\
                nightly.xml,\
-               lib/,\
                icons/,\
                build.properties,\
                build-nightlabs.xml,\
@@ -24,4 +23,5 @@ src.includes = src/,\
                build-nightlabs-compile.pre.xml,\
                LICENSE.txt,\
                .project,\
-               .classpath
+               .classpath,\
+               lib/
