added resourcePublisher and made globalclasspublish deprecated
git-svn-id: https://svn.jfire.org/svn/main/trunk/org.nightlabs.jfire.base@3189 18c61ebf-f106-0410-9e1e-81fb82415b8f

--- a/plugin.xml
+++ b/plugin.xml
@@ -218,7 +218,7 @@
     	point="org.nightlabs.classsharing.globalclasspublish">
      <globalClassPublish pattern="org\.nightlabs\.math\..*"/>
      <globalClassPublish pattern="org\.nightlabs\.jfire\.base\.jdo\.cache\.CacheCfMod"/>
-     <globalClassPublish pattern="org\.nightlabs\.language\..*"/>
+     <globalClassPublish pattern="org\.nightlabs\.base\.config\..*"/>
      <globalClassPublish pattern="org\.nightlabs\.jfire\.base\.person\.preferences\.PersonStructOrderConfigModule.*"/>
  	</extension>
 
