added LanguageCf to globalclasspublish
git-svn-id: https://svn.jfire.org/svn/main/trunk/org.nightlabs.jfire.base@3410 18c61ebf-f106-0410-9e1e-81fb82415b8f

--- a/plugin.xml
+++ b/plugin.xml
@@ -175,6 +175,7 @@
    <!-- ClassSharing for NightLabsBase et al -->
    <extension
          point="org.nightlabs.classsharing.globalclasspublish">
+         <resourcePublish pattern="org/nightlabs/language/LanguageCf.*"/>
       <globalClassPublish pattern="org\.nightlabs\.jfire\.base\.login\..*"/>
       <globalClassPublish pattern="org\.nightlabs\.jfire\.classloader\..*"/>
       <globalClassPublish pattern="org\.nightlabs\.config\..*"/>
