--- a/build-nightlabs.properties
+++ b/build-nightlabs.properties
@@ -10,4 +10,4 @@ j2ee.xdoclet.ejbdoclet.enable=false
 j2ee.deploy.subdir=JFire.last/
 j2ee.ear=JFireBase.ear
 j2ee.deployear.includes=JFireServerManager.rar,jdo-jpox-ds.template.xml
-j2ee.deploysubdir.excludes=jdo-jpox-ds.template.xml
+j2ee.deploysubdir.excludes=jdo-jpox-ds.template.xml,*.xml
