IDGenerator framework seems to be functional on the server side and is started on the client side (EJB and client cache still missing)
git-svn-id: https://svn.jfire.org/svn/main/trunk/org.nightlabs.jfire.base@3655 18c61ebf-f106-0410-9e1e-81fb82415b8f

--- a/plugin.xml
+++ b/plugin.xml
@@ -179,6 +179,7 @@
       <globalClassPublish pattern="org\.nightlabs\.j2ee\..*"/>
       <globalClassPublish pattern="org\.nightlabs\.xml\..*"/>
       <globalClassPublish pattern="org\.nightlabs\.jfire\.base\.config\..*"/>
+      <resourcePublish pattern="org/nightlabs/jfire/base/idgenerator/IDGeneratorClient\..*"/>
    </extension>
 	
 	
