--- a/.classpath
+++ b/.classpath
@@ -26,7 +26,7 @@
 	<classpathentry sourcepath="JBOSS_SRC/security/src/main" kind="var" path="JBOSS/client/jbosssx-client.jar"/>
 	<classpathentry kind="var" path="JBOSS/client/jnp-client.jar"/>
 	<classpathentry kind="var" path="JBOSS/client/log4j.jar"/>
-	<classpathentry kind="var" path="WORKSPACE/JFireBasePublicBean/dist/JFireBasePublicBean.jar"/>
+	<classpathentry sourcepath="/WORKSPACE/JFireBasePublicBean/src" kind="var" path="WORKSPACE/JFireBasePublicBean/dist/JFireBasePublicBean.jar"/>
 	<classpathentry kind="var" path="JUNIT_HOME/junit.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
