changed login icon
git-svn-id: https://svn.jfire.org/svn/main/trunk/org.nightlabs.jfire.base@3911 18c61ebf-f106-0410-9e1e-81fb82415b8f

--- a/src/org/nightlabs/jfire/base/plugin.properties
+++ b/src/org/nightlabs/jfire/base/plugin.properties
@@ -38,8 +38,8 @@ login.error.offlineDecision = User decided to work offline
 # **************************************
 # Actions
 # **************************************
-actions.login.icons.login = icons/Login_login.gif
-actions.login.icons.logout = icons/Login_logout.gif
+actions.login.icons.login = icons/Login_login.png
+actions.login.icons.logout = icons/Login_logout.png
 actions.login.tooltip.login = JFire Login
 actions.login.tooltip.logout = Logout from JFire
 action.new.unnamed = Unnamed
