added globalclasspublish for org.nightlabs.jdo.ObjectID
git-svn-id: https://svn.jfire.org/svn/main/trunk/org.nightlabs.jfire.base@3989 18c61ebf-f106-0410-9e1e-81fb82415b8f

--- a/plugin.xml
+++ b/plugin.xml
@@ -207,6 +207,7 @@
      <globalClassPublish pattern="org\.nightlabs\.jfire\.base\.jdo\.cache\.CacheCfMod"/>
      <globalClassPublish pattern="org\.nightlabs\.base\.config\..*"/>
      <globalClassPublish pattern="org\.nightlabs\.jfire\.base\.person\.preferences\.PersonStructOrderConfigModule.*"/>
+     <globalClassPublish pattern="org\.nightlabs\.jdo\.ObjectID"/>
  	</extension>
 
  	<!-- PersonDataFieldEditor extensions bock-based -->
