added Memory Monitor
git-svn-id: https://svn.jfire.org/svn/main/trunk/org.nightlabs.jfire.base@3991 18c61ebf-f106-0410-9e1e-81fb82415b8f

--- a/plugin.xml
+++ b/plugin.xml
@@ -96,6 +96,9 @@
          <property
                name="aboutImage"
                value="icons/JFire-Logo.16x16.png"/>
+		 <property 
+			   name="preferenceCustomization" 
+			   value="plugin_customization.ini"/>   
       </product>
    </extension>
 
