added timepattern to globalclasspublish
git-svn-id: https://svn.jfire.org/svn/main/trunk/org.nightlabs.jfire.base@4016 18c61ebf-f106-0410-9e1e-81fb82415b8f

--- a/plugin.xml
+++ b/plugin.xml
@@ -211,6 +211,7 @@
      <globalClassPublish pattern="org\.nightlabs\.base\.config\..*"/>
      <globalClassPublish pattern="org\.nightlabs\.jfire\.base\.person\.preferences\.PersonStructOrderConfigModule.*"/>
      <globalClassPublish pattern="org\.nightlabs\.jdo\.ObjectID"/>
+     <globalClassPublish pattern="org\.nightlabs\.timepattern\..*"/>
  	</extension>
 
  	<!-- PersonDataFieldEditor extensions bock-based -->
