--- a/build-nightlabs.properties
+++ b/build-nightlabs.properties
@@ -9,5 +9,5 @@ j2ee.xdoclet.ejbdoclet.enable=false
 
 j2ee.deploy.subdir=JFire.last/
 j2ee.ear=JFireBase.ear
-j2ee.deployear.includes=JFireServerManager.rar,jdo-jpox-ds.template.xml
+j2ee.deployear.includes=JFireServerManager.rar,*-ds.template.xml
 j2ee.deploysubdir.excludes=jdo-jpox-ds.template.xml,*.xml
