- switched to MANIFEST bundle-descriptor - refactored dependencies (re-export)
git-svn-id: https://svn.jfire.org/svn/main/trunk/org.nightlabs.jfire.base@4062 18c61ebf-f106-0410-9e1e-81fb82415b8f

--- a/build.properties
+++ b/build.properties
@@ -7,8 +7,7 @@ bin.includes = plugin.xml,\
                plugin.properties,\
                org.nightlabs.jfire.base.jar,\
                splash.bmp,\
-               LICENSE.txt,\
-               lib/
+               LICENSE.txt
 src.includes = src/,\
                splash.bmp,\
                schema/,\
