changed build-nightlabs.xml to per default copy nothing in the j2ee.deplysubdir
git-svn-id: https://svn.jfire.org/svn/main/trunk/JFireServerManager@4223 18c61ebf-f106-0410-9e1e-81fb82415b8f

--- a/build-nightlabs.properties
+++ b/build-nightlabs.properties
@@ -10,4 +10,6 @@ j2ee.xdoclet.ejbdoclet.enable=false
 j2ee.deploy.subdir=JFire.last/
 j2ee.ear=JFireBase.ear
 j2ee.deployear.includes=JFireServerManager.rar,*-ds.template.xml
-j2ee.deploysubdir.excludes=jdo-jpox-ds.template.xml,*.xml
+
+j2ee.deploysubdir.includes=JFireServerManager-ds.xml
+#j2ee.deploysubdir.excludes=jdo-jpox-ds.template.xml,*.xml
