after default change we need j2ee.deploysubdir.includes=JFire-AsyncInvokeQueue-JBoss-service.xml here
git-svn-id: https://svn.jfire.org/svn/main/trunk/JFireBaseBean@4244 18c61ebf-f106-0410-9e1e-81fb82415b8f

--- a/build-nightlabs.properties
+++ b/build-nightlabs.properties
@@ -13,6 +13,8 @@ j2ee.xdoclet.ejbdoclet.includes=**/*Bean.java
 #j2ee.clientdist.excludes=
 #j2ee.client.jar=
 
+j2ee.deploysubdir.includes=JFire-AsyncInvokeQueue-JBoss-service.xml
+
 j2ee.deploy.subdir=JFire.last/
 j2ee.ear=JFireBase.ear
 #j2ee.deploy.includes=
