ServerConfigurator can now be selected in the server initialization wizard
git-svn-id: https://svn.jfire.org/svn/main/trunk/JFireServerManager@4296 18c61ebf-f106-0410-9e1e-81fb82415b8f

--- a/.classpath
+++ b/.classpath
@@ -12,7 +12,7 @@
 	<classpathentry kind="var" path="JDO2"/>
 	<classpathentry kind="var" path="XERCES"/>
 	<classpathentry kind="var" path="XALAN"/>
-	<classpathentry kind="var" path="WORKSPACE/NightLabsCascadedAuthenticationJBoss/dist/NightLabsCascadedAuthenticationJBoss.jar"/>
+	<classpathentry sourcepath="/WORKSPACE/NightLabsCascadedAuthenticationJBoss/src" kind="var" path="WORKSPACE/NightLabsCascadedAuthenticationJBoss/dist/NightLabsCascadedAuthenticationJBoss.jar"/>
 	<classpathentry sourcepath="WORKSPACE/NightLabsBase/src" kind="var" path="WORKSPACE/NightLabsBase/dist/NightLabsBase.jar"/>
 	<classpathentry sourcepath="WORKSPACE/NightLabsJDO/src" kind="var" path="WORKSPACE/NightLabsJDO/dist/NightLabsJDO.jar"/>
 	<classpathentry kind="var" path="WORKSPACE/JFireRCLBackend/dist/JFireRCLBackend.jar"/>
