added META-INF and some other missing stuff to the build.properties
git-svn-id: https://svn.jfire.org/svn/main/trunk/org.nightlabs.jfire.base@4321 18c61ebf-f106-0410-9e1e-81fb82415b8f

--- a/build.properties
+++ b/build.properties
@@ -7,7 +7,9 @@ bin.includes = plugin.xml,\
                plugin.properties,\
                org.nightlabs.jfire.base.jar,\
                splash.bmp,\
-               LICENSE.txt
+               LICENSE.txt,\
+               META-INF/,\
+               lib/
 src.includes = src/,\
                splash.bmp,\
                schema/,\
@@ -22,5 +24,4 @@ src.includes = src/,\
                build-nightlabs-compile.pre.xml,\
                LICENSE.txt,\
                .project,\
-               .classpath,\
-               lib/
+               .classpath
