added basic object cache extension point
git-svn-id: https://svn.jfire.org/svn/main/trunk/org.nightlabs.jfire.base@4583 18c61ebf-f106-0410-9e1e-81fb82415b8f

--- a/plugin.xml
+++ b/plugin.xml
@@ -190,5 +190,9 @@
            class="org.nightlabs.jfire.base.config.WorkstationCSVisualiser"
            configSetupType="org.nightlabs.jfire.config.WorkstationConfigSetup"/>
   </extension>
+  <extension
+        point="org.nightlabs.base.cache">
+     <cacheFactory class="org.nightlabs.jfire.base.jdo.cache.CacheFactory"/>
+  </extension>
 
 </plugin>
