switched to ManifestResourceBundle (lang properties outside of jar)
git-svn-id: https://svn.jfire.org/svn/main/trunk/org.nightlabs.jfire.base@4631 18c61ebf-f106-0410-9e1e-81fb82415b8f

--- a/plugin.properties
+++ b/plugin.properties
@@ -1,3 +1,13 @@
+# ***************************************
+# Copyright (c) 2004
+# NightLabs GmbH
+# ***************************************
+
+
+# ****************************************************************************
+#                       Properties for the plugin.xml
+# ****************************************************************************
+
 productName=JFire
 appName=JFire App
 perspectives.jfireWelcome.name = JFire Update
@@ -25,3 +35,82 @@ person.preferences.pages.PersonManagement.name=Person Management
 person.preferences.pages.PersonStructOrder.name=Structure Display Order
 person.preferences.pages.PersonStructOrder.blockstable.col0=Structure blocks
 person.preferences.pages.PersonStructOrder.fieldstable.col0=Structure fields
+
+# ****************************************************************************
+#                       Properties for the Classes
+# ****************************************************************************
+
+# ***************************************
+# Login Dialog Labels
+# ***************************************
+
+login.label.login = Login
+login.label.user = Username: 
+login.label.pass = Password: 
+login.label.details = Details: 
+login.label.organisation = OrganisationID: 
+login.label.serverURL = Server URL: 
+login.label.initialContext = InitialContext Factory: 
+login.label.securityProtocol = Security Protocol: 
+login.label.saveSettings = Save settings to Config
+login.label.button.login = Login
+login.label.button.offline = Work Offline
+login.label.button.quit = Quit
+
+# ***************************************
+# Login Dialog Error Messages
+# ***************************************
+
+login.error.missingUserID = You must specify an userID.
+login.error.missingOrganisationID = You must specify an organisationID.
+login.error.missingContextFactory = You must specify an initial context factory.
+login.error.missingServerURL = You must specify a server URL.
+login.error.missingSecurityProtocol = You must specify a security protocol.
+login.error.unhadledExceptionMessage = Caught exception while verifying login.
+login.error.authenticationFailed = Authentication failed.\nCheck username, password and organisationID.
+login.error.communicatinError = Communication error. Check server URL.\nErrormessage: 
+login.error.offlineDecision = User decided to work offline
+
+
+# **************************************
+# Actions
+# **************************************
+actions.login.icons.login = icons/Login_login.png
+actions.login.icons.logout = icons/Login_logout.png
+actions.login.tooltip.login = JFire Login
+actions.login.tooltip.logout = Logout from JFire
+action.new.unnamed = Unnamed
+
+# **************************************
+# Menus
+# **************************************
+menu.openrecentfiles.text = Recent Files
+
+# **************************************
+# Person Management
+# **************************************
+person.preferences.pages.PersonStructOrder.blockstable.col0=Structure blocks
+person.preferences.pages.PersonStructOrder.fieldstable.col0=Structure fields
+
+person.search.result.table.col0=person
+
+person.edit.wizard.pages.PersonalDataPage.labels.displayName=Display-name
+person.edit.wizard.pages.PersonalDataPage.labels.autoCreateDisplayName=Autocreate display-name from person data
+person.edit.wizard.pages.PersonalDataPage.errormessage.specifyName=A name has to be specified
+person.edit.wizard.pages.PersonalDataPage.errormessage.specifyFirstName=A firstname has to be specified
+
+
+
+# **************************************
+# LanguageWatcher
+# **************************************
+language.watcher.restartdialog.title=Restart for language change
+language.watcher.restartdialog.message.startedWith=JFire was started with language
+language.watcher.restartdialog.message.userPrefered=Your prefered language seems to be
+language.watcher.restartdialog.message.question=Do you want to restart JFire with your prefered language?
+
+# **************************************
+# Update
+# **************************************
+update.message.checkingForUpdates=Checking for updates...
+update.message.pleaseRestart=The application has to be restarted to finish the update. Please press 'OK' to restart.
