some bugfixed and enhancements
git-svn-id: https://svn.jfire.org/svn/main/trunk/org.nightlabs.jfire.base@4818 18c61ebf-f106-0410-9e1e-81fb82415b8f

--- a/build.properties
+++ b/build.properties
@@ -8,7 +8,8 @@ bin.includes = plugin.xml,\
                splash.bmp,\
                LICENSE.txt,\
                META-INF/,\
-               lib/
+               lib/,\
+               plugin_de_DE.properties
 src.includes = src/,\
                splash.bmp,\
                schema/,\
@@ -22,4 +23,5 @@ src.includes = src/,\
                build-nightlabs-path.properties,\
                LICENSE.txt,\
                .project,\
-               .classpath
+               .classpath,\
+               plugin_de_DE.properties
