--- a/plugin.xml
+++ b/plugin.xml
@@ -223,32 +223,32 @@
    <extension
          point="org.eclipse.ui.viewActions">
       <viewContribution
-            id="org.nightlabs.jfire.prop.structedit.StructEditView"
-            targetID="org.nightlabs.jfire.prop.structedit.StructEditView">
+            id="org.nightlabs.jfire.base.prop.structedit.StructEditView"
+            targetID="org.nightlabs.jfire.base.prop.structedit.StructEditView">
          <action
                class="org.nightlabs.jfire.base.prop.structedit.action.AddStructBlockAction"
-               icon="icons/structedit/action/AddStructFieldAction.16x16.gif"
+               icon="icons/prop/structedit/action/AddStructFieldAction.16x16.gif"
                id="org.nightlabs.jfire.base.prop.structedit.action.AddStructBlockAction"
                label="Add a new StructBlock"
                style="push"
                toolbarPath="additions"/>
          <action
                class="org.nightlabs.jfire.base.prop.structedit.action.AddStructFieldAction"
-               icon="icons/structedit/action/AddStructFieldAction.16x16.png"
+               icon="icons/prop/structedit/action/AddStructFieldAction.16x16.png"
                id="org.nightlabs.jfire.base.prop.structedit.action.AddStructFieldAction"
                label="Add a new StructField"
                style="push"
                toolbarPath="additions"/>
          <action
                class="org.nightlabs.jfire.base.prop.structedit.action.RemoveStructElementAction"
-               icon="icons/structedit/action/RemoveStructElementAction.16x16.png"
+               icon="icons/prop/structedit/action/RemoveStructElementAction.16x16.png"
                id="org.nightlabs.jfire.base.prop.structedit.action.RemoveStructElementAction"
                label="Remove the selected struct element"
                style="push"
                toolbarPath="additions"/>
          <action
                class="org.nightlabs.jfire.base.prop.structedit.action.StoreStructure"
-               icon="icons/structedit/action/StoreStructure.16x16.png"
+               icon="icons/prop/structedit/action/StoreStructure.16x16.png"
                id="org.nightlabs.jfire.base.prop.structedit.action.StoreStructure"
                label="Store the current structure on the server"
                style="push"
