- added EditingPage for workstation configurations (still small Problem with JPOX)  - changed configkey-length in ConfigModules due to Problems with JPOX  - removed old workstation configuration page
git-svn-id: https://svn.jfire.org/svn/main/trunk/org.nightlabs.jfire.base@5250 18c61ebf-f106-0410-9e1e-81fb82415b8f

--- a/plugin.xml
+++ b/plugin.xml
@@ -162,6 +162,12 @@
             class="org.nightlabs.jfire.base.person.preferences.PersonStructOrderPreferencePage"
             id="org.nightlabs.jfire.person.preferences.PersonStructOrderPreferencePage">
       </page>  
+      <page
+            name="Feature Set"
+            category=""
+            class="org.nightlabs.jfire.base.workstation.WorkstationFeaturesPreferencePage"
+            id="org.nightlabs.jfire.base.workstation.WorkstationFeaturesPreferencePage">
+      </page>  
 	</extension>
 
 	
