- added basic application for ip1-standalone-usage to org.nightlabs.ipanema1.client.base - major refactoring of Ipanema1-client to support different communication ways (direct + proxy via jfire) transparently
git-svn-id: https://svn.jfire.org/svn/main/trunk/org.nightlabs.jfire.base@5280 18c61ebf-f106-0410-9e1e-81fb82415b8f

--- a/plugin.xml
+++ b/plugin.xml
@@ -292,5 +292,9 @@
             class="org.nightlabs.jfire.base.prop.edit.blockbased.TextDataFieldEditor$Factory"
             targetType="org.nightlabs.jfire.prop.TextDataField"/>
    </extension>
+   <extension
+         point="org.nightlabs.base.login">
+      <login class="org.nightlabs.jfire.base.login.LoginDelegate"/>
+   </extension>
 			
 </plugin>
