--- a/plugin.xml
+++ b/plugin.xml
@@ -264,17 +264,23 @@
    <extension
          point="org.nightlabs.jfire.base.propStructField">
       <propStructField
-            class="org.nightlabs.jfire.prop.TextStructField"
+            class="org.nightlabs.jfire.prop.structfield.TextStructField"
             description="Simple field for textual input"
             editorFactoryClass="org.nightlabs.jfire.base.prop.structedit.TextStructFieldEditor$TextStructFieldEditorFactory"
             factoryClass="org.nightlabs.jfire.base.prop.structedit.TextStructFieldFactory"
             name="Text field"/>
       <propStructField
-            class="org.nightlabs.jfire.prop.SelectionStructField"
+            class="org.nightlabs.jfire.prop.structfield.SelectionStructField"
             description="Field that lets the user select from a predefined domain of values"
             editorFactoryClass="org.nightlabs.jfire.base.prop.structedit.SelectionStructFieldEditor$SelectionStructFieldEditorFactory"
             factoryClass="org.nightlabs.jfire.base.prop.structedit.SelectionStructFieldFactory"
             name="Selection field"/>
+      <propStructField
+            class="org.nightlabs.jfire.prop.structfield.RegexStructField"
+            description="Field that allows to restrict the given input by a regular expression."
+            editorFactoryClass="org.nightlabs.jfire.base.prop.structedit.RegexStructFieldEditor$RegexStructFieldEditorFactory"
+            factoryClass="org.nightlabs.jfire.base.prop.structedit.RegexStructFieldFactory"
+            name="Regex field"/>
    </extension>
  	<extension
        id="org.nightlabs.jfire.person.edit.blockbased.special.PersonalDataBlockEditor"
@@ -291,6 +297,10 @@
       <propDataFieldEditorFactory
             class="org.nightlabs.jfire.base.prop.edit.blockbased.TextDataFieldEditor$Factory"
             targetType="org.nightlabs.jfire.prop.TextDataField"/>
+      <propDataFieldEditorFactory
+            class="org.nightlabs.jfire.base.prop.edit.blockbased.SelectionDataFieldEditor$Factory"
+            targetType="org.nightlabs.jfire.prop.SelectionDataField">
+      </propDataFieldEditorFactory>
    </extension>
    <extension
          point="org.nightlabs.base.login">
