Added another struct field
git-svn-id: https://svn.jfire.org/svn/main/trunk/org.nightlabs.jfire.base@5324 18c61ebf-f106-0410-9e1e-81fb82415b8f

--- a/plugin.xml
+++ b/plugin.xml
@@ -287,6 +287,12 @@
             editorFactoryClass="org.nightlabs.jfire.base.prop.structedit.NumberStructFieldEditor$NumberStructFieldEditorFactory"
             factoryClass="org.nightlabs.jfire.base.prop.structedit.NumberStructFieldFactory"
             name="Number field"/>
+      <propStructField
+            class="org.nightlabs.jfire.prop.structfield.ImageStructField"
+            description="Field for adding image data"
+            editorFactoryClass="org.nightlabs.jfire.base.prop.structedit.ImageStructFieldEditor$ImageStructFieldEditorFactory"
+            factoryClass="org.nightlabs.jfire.base.prop.structedit.ImageStructFieldFactory"
+            name="Image field"/>
    </extension>
  	<extension
        id="org.nightlabs.jfire.person.edit.blockbased.special.PersonalDataBlockEditor"
