adopted prop refactorings
git-svn-id: https://svn.jfire.org/svn/main/trunk/org.nightlabs.jfire.base@5330 18c61ebf-f106-0410-9e1e-81fb82415b8f

--- a/plugin.xml
+++ b/plugin.xml
@@ -308,10 +308,10 @@
          point="org.nightlabs.jfire.base.propDataFieldEditorFactory">
       <propDataFieldEditorFactory
             class="org.nightlabs.jfire.base.prop.edit.blockbased.TextDataFieldEditor$Factory"
-            targetType="org.nightlabs.jfire.prop.TextDataField"/>
+            targetType="org.nightlabs.jfire.prop.datafield.TextDataField"/>
       <propDataFieldEditorFactory
             class="org.nightlabs.jfire.base.prop.edit.blockbased.SelectionDataFieldEditor$Factory"
-            targetType="org.nightlabs.jfire.prop.SelectionDataField">
+            targetType="org.nightlabs.jfire.prop.datafield.SelectionDataField">
       </propDataFieldEditorFactory>
    </extension>
    <extension
