Added DateStructField + DateStructFieldEditor
git-svn-id: https://svn.jfire.org/svn/main/trunk/org.nightlabs.jfire.base@5336 18c61ebf-f106-0410-9e1e-81fb82415b8f

--- a/plugin.xml
+++ b/plugin.xml
@@ -293,6 +293,12 @@
             editorFactoryClass="org.nightlabs.jfire.base.prop.structedit.ImageStructFieldEditor$ImageStructFieldEditorFactory"
             factoryClass="org.nightlabs.jfire.base.prop.structedit.ImageStructFieldFactory"
             name="Image field"/>
+       <propStructField
+            class="org.nightlabs.jfire.prop.structfield.DateStructField"
+            description="Field for inputting absolute times/dates."
+            editorFactoryClass="org.nightlabs.jfire.base.prop.structedit.DateStructFieldEditor$DateStructFieldEditorFactory"
+            factoryClass="org.nightlabs.jfire.base.prop.structedit.DateStructFieldFactory"
+            name="Date field"/>
    </extension>
  	<extension
        id="org.nightlabs.jfire.person.edit.blockbased.special.PersonalDataBlockEditor"
