Added new struct field to hold images with corresponding editors for the struct and the data field.
git-svn-id: https://svn.jfire.org/svn/main/trunk/org.nightlabs.jfire.base@5359 18c61ebf-f106-0410-9e1e-81fb82415b8f

--- a/plugin.xml
+++ b/plugin.xml
@@ -324,5 +324,12 @@
          point="org.nightlabs.base.login">
       <login class="org.nightlabs.jfire.base.login.LoginDelegate"/>
    </extension>
+   <extension
+         point="org.nightlabs.jfire.base.propDataFieldEditorFactory">
+      <propDataFieldEditorFactory
+            class="org.nightlabs.jfire.base.prop.edit.blockbased.ImageDataFieldEditor$Factory"
+            targetType="org.nightlabs.jfire.prop.datafield.ImageDataField">
+      </propDataFieldEditorFactory>
+   </extension>
 			
 </plugin>
